tup/parse/testdata/error/output/function_declarations.tup
# missing function body
error: expecting "function body", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:1:29

# missing return type for fn
error: expecting "return type or _", got "{"
--> /home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:1:26

# unclosed parameter list
error: expecting ")", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:3:2

# function body missing closing brace
error: expecting "}", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:2:10
